# orionbelt-ontology-builder

./: .gitignore  CLA.md  CLAUDE.md  LICENSE  README.md  app.py  ontology_manager.py  pyproject.toml  requirements.txt  templates.py
.streamlit/: config.toml
lib/graph_viewer/: index.html
samples/: README.md
tests/: conftest.py  test_annotations.py  test_bulk.py  test_classes.py  test_delete_impact.py  test_diff.py  test_export.py  test_import_namespace.py  test_individuals.py  test_jsonld.py  test_merge.py  test_metadata.py  test_prefixes.py  test_properties.py  test_samples.py  test_search.py  test_skos.py  test_templates.py  test_undo.py  test_usages.py  test_validation.py
